fix: overflow in calendar page. add calendarPageContainer div.

--- a/src/frontend/study-tracker/app/routes/calendar/calendarPage.module.css
+++ b/src/frontend/study-tracker/app/routes/calendar/calendarPage.module.css
@@ -1,7 +1,14 @@
 
-.calendarContainer {
+.calendarPageContainer {
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
+
     animation: fade 300ms ease;
+}
+.calendarContainer {
+    overflow: auto;
 }
 
 @keyframes fade {
